--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -19,10 +19,10 @@
   <div class="middle-section">
     <div class="left-side">
       <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/nieuwsbrief">Nieuwsbrief</a></li>
-        <li><a href="/agenda">Agenda</a></li>
-        <li><a href="/wie-zijn-wij">Wie zijn wij</a></li>
+        <li><a href="{{ site.baseurl }}/">Home</a></li>
+        <li><a href="{{ site.baseurl }}/nieuwsbrief">Nieuwsbrief</a></li>
+        <li><a href="{{ site.baseurl }}/agenda">Agenda</a></li>
+        <li><a href="{{ site.baseurl }}/wie-zijn-wij">Wie zijn wij</a></li>
       </ul>
     </div>
     <div class="right-side">
