--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>{{ page.title }}</title>
   <!-- Add your CSS stylesheets and other meta tags here -->
-  <link rel="stylesheet" href="index.css">
+  <!-- <link rel="stylesheet" href="index.css">-->
 </head>
 <body>
   <header>
