--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>{{ page.title }}</title>
   <!-- Add your CSS stylesheets and other meta tags here -->
-  <link rel="stylesheet" href="{{ "/assets/css/index.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/css/index.css" | relative_url }}" />
 </head>
 <body>
   <header>
@@ -13,6 +13,7 @@
 	<div class='header-title'>
 		<div class='header-title-outer'>
 			<div class="breadcrumbs">
+				<a href="{{ site.url }}">Home</a>
 				{% assign breadcrumb_paths = page.url | split: '/' %}
 				{% for path in breadcrumb_paths %}
 					{% if path != '' %}
@@ -21,15 +22,13 @@
 						{% if forloop.first == false %}
 							<span class="breadcrumb-separator">►</span>
 						{% endif %}
-						{% if forloop.index == 2 %}
-							<a href="{{ site.url }}">Home</a>
-						{% else %}
-							<a href="{{ site.url }}{{ breadcrumb_link }}">{{ breadcrumb_title }}</a>
-						{% endif %}
+						<a href="{{ site.url }}{{ breadcrumb_link }}">{{ breadcrumb_title }}</a>
 					{% endif %}
 				{% endfor %}
 			</div>
 			<div class='header-title-date'>{{ "now" | date: "%d %B %Y om %H:%M" }}</div>
+		</div>
+		<div class='header-title-search'>
 		</div>
 	</div>
     <div>
