--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: index
 ---
 
 <div class="post">
-  <h1>{{ page.title }}</h1>
+  <div class="post-title">{{ post.title }}</div>
   <div class="post-content">
     {{ content }}
   </div>
