intro dynamic scroll

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -38,7 +38,7 @@
       <ul>
         <li><a href="{{ site.baseurl }}/">Home</a></li>
         <li><a href="{{ site.baseurl }}/nieuwsbrief">Nieuwsbrief</a></li>
-        <li><a href="{{ site.baseurl }}/agenda">Agenda</a></li>
+        <li><a href="{{ site.baseurl }}/dynamic">Agenda</a></li>
         <li><a href="{{ site.baseurl }}/wie-zijn-wij">Wie zijn wij</a></li>
       </ul>
     </div>
@@ -53,6 +53,7 @@
   </footer>
 
   <!-- Add your JavaScript files here -->
+  <script src="{{ "/assets/js/dynamicscroll.js" | relative_url }}">
 
 </body>
 </html>
