probally doesnt work

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -53,7 +53,7 @@
   </footer>
 
   <!-- Add your JavaScript files here -->
-  <script src="{{ "/assets/js/dynamicscroll.js" | relative_url }}">
+  <script src="{{ "/assets/js/dynamicscroll.js" | relative_url }}" />
 
 </body>
 </html>
